--- a/java.html
+++ b/java.html
@@ -10,8 +10,9 @@
 
 <body>
 
-    <div class="nomeInst">Nome Instituição</div>
-    <div class="voltarIni"><a href="index.html">Página Inicial</a></div>
+    <div class="nomeInst">ALL TEC CURSOS</div>
+    <div class="voltarIni"><a href="index.html">Home</a></div>
+    <div class="irCurs"><a href="linkCursos.html">Cursos</a></div>
     <div class="irCont"><a href="contato.html">Contato</a></div>
 
     <div class="cont">
@@ -20,7 +21,7 @@
         <p>Java Básico
             Fazer o download do Java, instalar o JDK (kit de desenvolvimento, que vem com o compilador, APIs e
             ferramentas) e fazer a configuração do ambiente para um simples hello world são passos que podem traumatizar
-            quem está começando. Vamos te ajudar.
+            quem está começando. Vamos te ajudar.<br><br>
 
             Você deve começar por esses primeiros passos e ter uma base sólida em conceitos de maneira prática:
 
@@ -30,9 +31,9 @@
                 <li>reutilização de código, com o uso de bibliotecas importantes</li>
             </ol>
 
-            Durante o plano de estudos da nossa formação java passamos por esses tópicos
+            Durante o plano de estudos da nossa formação java passamos por esses tópicos: <br><br>
 
-            Java Avançado
+            Java Avançado<br><br>
             Aqui entram as tecnologias do Spring Boot e Java EE e também os chamados frameworks, onde escreveremos
             código de acordo com algumas regras e interfaces para poder ter diversos ganhos em servidores, como o
             Tomcat, o jetty e o JBoss / Wildfly.
