--- a/sql.html
+++ b/sql.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-
-    <div class="nomeInst">Nome Instituição</div>
-    <div class="voltarIni"><a href="index.html">Página Inicial</a></div>
+    <div class="nomeInst">ALL TEC CURSOS</div>
+    <div class="voltarIni"><a href="index.html">Home</a></div>
+    <div class="irCurs"><a href="linkCursos.html">Cursos</a></div>
     <div class="irCont"><a href="contato.html">Contato</a></div>
 
     <div class="cont">
