--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
        
         <div class="voltarIni"><a href="index_pg3.html">Home</a></div>
         <div class="irCurs"><a href="linkcursos.html">Cursos</a></div>
-        <div class="irCont"><a href="linkcontato.html">Contato</a></div>
+        <div class="irCont"><a href="contatos.html">Contato</a></div>
 
 
         <p>
