Correção link contatos

--- a/java.html
+++ b/java.html
@@ -13,7 +13,7 @@
     <div class="nomeInst">ALL TEC CURSOS</div>
     <div class="voltarIni"><a href="index.html">Home</a></div>
     <div class="irCurs"><a href="linkCursos.html">Cursos</a></div>
-    <div class="irCont"><a href="contato.html">Contato</a></div>
+    <div class="irCont"><a href="contatos.html">Contato</a></div>
 
     <div class="cont">
         <h3>Por onde começar com Java?</h3>
