--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
        </div>
        
         <div class="voltarIni"><a href="index_pg3.html">Home</a></div>
-        <div class="irCurs"><a href="linkcursos.html">Cursos</a></div>
+        <div class="irCurs"><a href="cursos.html">Cursos</a></div>
         <div class="irCont"><a href="contatos.html">Contato</a></div>
 
 
