--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
        <div class="nomeInst">ALL TEC CURSOS
        </div>
        
-        <div class="voltarIni"><a href="index_pg3.html">Home</a></div>
+        <div class="voltarIni"><a href="index.html">Home</a></div>
         <div class="irCurs"><a href="cursos.html">Cursos</a></div>
         <div class="irCont"><a href="contatos.html">Contato</a></div>
 
@@ -24,7 +24,7 @@
         <br/>está num projeto onde deverá aprender uma nova linguagem em pouco tempo
         <br/>ou se simplesmente deseja entrar no mundo da tecnologia,
         <br/>a  ALL TEC é o seu lugar!
-        </br>Veja nossos cursos clicando <a href="linkcursos.html">aqui</a>.
+        </br>Veja nossos cursos clicando <a href="cursos.html">aqui</a>.
         </br>E não esqueça, pensou em tecnologia, pensou ALL TEC!
         </p>
       
