--- a/python.html
+++ b/python.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="nomeInst">ALL TEC CURSOS</div>
-    <div class="voltarIni"><a href="index.html">Home</a></div>
+    <div class="voltarIni"><a href="index.htm">Home</a></div>
     <div class="irCurs"><a href="cursos.html">Cursos</a></div>
     <div class="irCont"><a href="contatos.html">Contato</a></div>
 
