--- a/Contatos_Java.html
+++ b/Contatos_Java.html
@@ -27,7 +27,7 @@
             Contatos
 
         </title>
-
+        <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
 
     <body>
