--- a/cursos.html
+++ b/cursos.html
@@ -5,6 +5,7 @@
         <title>
             ALL TEC 
         </title>
+        <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
     <body>
         <div class="nomeInst">ALL TEC CURSOS
@@ -12,7 +13,7 @@
     
         <div class="voltarIni"><a href="index.htm">Home</a></div>
         <div class="irCurs"><a href="cursos.html">Cursos</a></div>
-        <div class="irCont"><a href="contatos.html">Contato</a></div>
+        <div class="irCont"><a href="Contatos_Java.html">Contato</a></div>
 
 
         <p>
