--- a/front.html
+++ b/front.html
@@ -12,7 +12,7 @@
     <div class="nomeInst">ALL TEC CURSOS</div>
     <div class="voltarIni"><a href="index.htm">Home</a></div>
     <div class="irCurs"><a href="cursos.html">Cursos</a></div>
-    <div class="irCont"><a href="contatos.html">Contato</a></div>
+    <div class="irCont"><a href="Contatos_Java.html">Contato</a></div>
 
     <div class="cont">
         <h3>Por onde começar com Front-end?</h3>
