--- a/front.html
+++ b/front.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="cont">
-        <h3>Por onde começar com Front-end?</h3>
+        <h3>Por onde começar em Front-end?</h3>
         <p>Front-End pode ser descrito como a camada de software que faz parte da interface com o usuário. Tudo o que
             capta informação do cliente, desde botões a movimentos do celular, até as informações disponibilizadas para
             ele, como caixas de diálogo, páginas web e audio de voz. Quando falamos genericamente de Front-End, estamos
