--- a/Contatos_Java.html
+++ b/Contatos_Java.html
@@ -32,6 +32,16 @@
 
     <body>
         
+        <div class="nomeInst">ALL TEC CURSOS</div>
+
+        <div class="menu">
+            <div class="voltarIni"><a href="index.htm">Home</a></div>
+            <div class="irCurs"><a href="cursos.html">Cursos</a></div>
+            <div class="irCont"><a href="Contatos_Java.html">Contato</a></div>
+        </div>
+
+        <div class="cont">
+            
         <h1>
             Fale Conosco
         </h1><br><br>
@@ -108,7 +118,7 @@
 
             <a href="index.htm">Voltar</a>
         </form>
-
+    </div>
     </body>
 
 </html>
