--- a/contatos.html
+++ b/contatos.html
@@ -16,6 +16,13 @@
 
     <body>
         
+        <div class="nomeInst">ALL TEC CURSOS</div>
+        <div class="menu">
+            <div class="voltarIni"><a href="index.htm">Home</a></div>
+            <div class="irCurs"><a href="cursos.html">Cursos</a></div>
+            <div class="irCont"><a href="Contatos_Java.html">Contato</a></div>
+        </div>
+        
         <h1>
             Fale Conosco
         </h1><br><br>
