--- a/cursos.html
+++ b/cursos.html
@@ -11,13 +11,15 @@
         <div class="nomeInst">ALL TEC CURSOS
         </div>
     
-        <div class="voltarIni"><a href="index.htm">Home</a></div>
-        <div class="irCurs"><a href="cursos.html">Cursos</a></div>
-        <div class="irCont"><a href="Contatos_Java.html">Contato</a></div>
+        <div class="menu">
+            <div class="voltarIni"><a href="index.htm">Home</a></div>
+            <div class="irCurs"><a href="cursos.html">Cursos</a></div>
+            <div class="irCont"><a href="Contatos_Java.html">Contato</a></div>
+        </div>
 
 
         <p>
-        <div class="cursos">
+        <div class="cont">
         <h3>Nossos cursos</h3>
 
         </br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
