--- a/front.html
+++ b/front.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+
     <div class="nomeInst">ALL TEC CURSOS</div>
+
     <div class="menu">
         <div class="voltarIni"><a href="index.htm">Home</a></div>
         <div class="irCurs"><a href="cursos.html">Cursos</a></div>
@@ -17,7 +19,8 @@
     </div>
 
     <div class="cont">
-        <h3>Por onde começar em Front-end?</h3>
+        <h3>Por onde começar com Front-end?</h3>
+        
         <p>Front-End pode ser descrito como a camada de software que faz parte da interface com o usuário. Tudo o que
             capta informação do cliente, desde botões a movimentos do celular, até as informações disponibilizadas para
             ele, como caixas de diálogo, páginas web e audio de voz. Quando falamos genericamente de Front-End, estamos
