Incluindo banner, ajustando textos e modificando formulario

--- a/java.html
+++ b/java.html
@@ -10,7 +10,9 @@
 
 <body>
 
-    <div class="nomeInst">ALL TEC CURSOS</div>
+    <div class="page-header">
+        <h1><a href="/">ALL TEC CURSOS</a></h1>
+    </div>
 
     <div class="menu">
         <div class="voltarIni"><a href="index.htm">Home</a></div>
@@ -21,25 +23,24 @@
     <div class="cont">
         <h3>Por onde começar com Java?</h3>
 
-        <p>Java Básico
-            Fazer o download do Java, instalar o JDK (kit de desenvolvimento, que vem com o compilador, APIs e
+        <h1>Java Básico</h1>
+            <p>Fazer o download do Java, instalar o JDK (kit de desenvolvimento, que vem com o compilador, APIs e
             ferramentas) e fazer a configuração do ambiente para um simples hello world são passos que podem traumatizar
             quem está começando. Vamos te ajudar.<br><br>
 
             Você deve começar por esses primeiros passos e ter uma base sólida em conceitos de maneira prática:
+            </p>
 
             <ol>
                 <li>orientação a objetos: focar em praticar sem cair em regras engessadas, como de getter and setter</li>
                 <li>encapsulamento, escondendo o funcionamento interno das classes e isolando a comunicação em interfaces</li>
                 <li>reutilização de código, com o uso de bibliotecas importantes</li>
-            </ol>
+            </ol></p><br>
 
-            Durante o plano de estudos da nossa formação java passamos por esses tópicos: <br><br>
-
-            Java Avançado<br><br>
-            Aqui entram as tecnologias do Spring Boot e Java EE e também os chamados frameworks, onde escreveremos
+            <h1>Java Avançado</h1>
+            <p>Aqui entram as tecnologias do Spring Boot e Java EE e também os chamados frameworks, onde escreveremos
             código de acordo com algumas regras e interfaces para poder ter diversos ganhos em servidores, como o
-            Tomcat, o jetty e o JBoss / Wildfly.
+            Tomcat, o jetty e o JBoss / Wildfly.</p>
 
             <ol>
                 <li>API e Microservices - estamos vivendo na época de APIs e serviços. Aprenda construir uma API Rest com Spring</li>
