--- a/sql.html
+++ b/sql.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <div class="nomeInst">ALL TEC CURSOS</div>
+    <div class="page-header">
+        <h1><a href="/">ALL TEC CURSOS</a></h1>
+    </div>
 
     <div class="menu">
         <div class="voltarIni"><a href="index.htm">Home</a></div>
@@ -25,7 +27,7 @@
 
             Para começar com banco de dados, você vai estudar como modelar seus dados e saber inserir e localizar
             informações nas tabelas. Isso vai acontecer através dos comandos SQL como SELECTs e INSERTs. Isso aparece
-            com frequência nesses cenários:<br>
+            com frequência nesses cenários:</p>
 
             <ol>
                 <li>dar o primeiro passo para além do Excel e organizar seus modelos de dados</li>
@@ -33,7 +35,7 @@
                 <li>minerar informações de diversas fontes para fazer análises exploratórias</li>
             </ol>
 
-            Os bancos de dados mais populares são: MySQL, PostgreSQL, Oracle e SQLServer.<br><br>
+            <p>Os bancos de dados mais populares são: MySQL, PostgreSQL, Oracle e SQLServer.<br><br>
 
             Além disso, vai encontrar como trabalhar com essas bases usando Python, técnicas de data science e bancos
             NoSQL.</p>
