--- a/cursos.html
+++ b/cursos.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
     <body>
-        <div class="nomeInst">ALL TEC CURSOS
+        
+        <div class="page-header">
+            <h1><a href="/">ALL TEC CURSOS</a></h1>
         </div>
     
         <div class="menu">
