--- a/front.html
+++ b/front.html
@@ -10,7 +10,9 @@
 
 <body>
 
-    <div class="nomeInst">ALL TEC CURSOS</div>
+    <div class="page-header">
+        <h1><a href="/">ALL TEC CURSOS</a></h1>
+    </div>
 
     <div class="menu">
         <div class="voltarIni"><a href="index.htm">Home</a></div>
