--- a/index.htm
+++ b/index.htm
@@ -10,8 +10,9 @@
 
     <body>
         
-       <div class="nomeInst">ALL TEC CURSOS
-       </div>
+        <div class="page-header">
+            <h1><a href="/">ALL TEC CURSOS</a></h1>
+        </div>
 
        <div class="menu">
         <div class="voltarIni"><a href="index.htm">Home</a></div>
@@ -32,6 +33,9 @@
         Veja nossos cursos clicando <a href="cursos.html">aqui</a>.
         E não esqueça, pensou em tecnologia, pensou ALL TEC!
         </p>
+
+        <img src="sala_index.jpg" alt="Nossa sala de Treinamento" width=300 height=200>
+
         </div>
       
     </body>
