--- a/cursos.html
+++ b/cursos.html
@@ -20,12 +20,12 @@
         </div>
 
 
-        <p>
         <div class="cont">
-        <h3>Nossos cursos</h3>
-
-        </br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
-        </br>os seguintes cursos na ALL TEC:
+            <h3>Cursos</h3>
+            
+            <p></br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
+                </br>os seguintes cursos na ALL TEC:
+            </p>
         <ul>
             <li><a href="front.html">HTML</a></li> 
             <li><a href="sql.html">SQL</a></li>
