--- a/cursos.html
+++ b/cursos.html
@@ -21,11 +21,12 @@
 
 
         <div class="cont">
+        <p>
             <h3>Cursos</h3>
             
-            <p></br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
-                </br>os seguintes cursos na ALL TEC:
-            </p>
+            </br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
+            </br>os seguintes cursos na ALL TEC:
+        </p>
         <ul>
             <li><a href="front.html">HTML</a></li> 
             <li><a href="sql.html">SQL</a></li>
@@ -34,4 +35,4 @@
             </ul>
         </div>      
     </body>
-</html>        
+</html>
