--- a/cursos.html
+++ b/cursos.html
@@ -23,9 +23,9 @@
         <div class="cont">
         <p>
             <h3>Cursos</h3>
-            
-            </br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
+            <h1></br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
             </br>os seguintes cursos na ALL TEC:
+            </h1>
         </p>
         <ul>
             <li><a href="front.html">HTML</a></li> 
