--- a/cursos.html
+++ b/cursos.html
@@ -23,8 +23,8 @@
         <div class="cont">
         <p>
             <h3>Cursos</h3>
-            <h1></br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
-            </br>os seguintes cursos na ALL TEC:
+            Pensando nas linguagens mais usadas atualmente, disponibilizamos
+            </br> os seguintes cursos na ALL TEC:
             </h1>
         </p>
         <ul>
