--- a/cursos.html
+++ b/cursos.html
@@ -23,7 +23,7 @@
         <div class="cont">
         <p>
             <h3>Cursos</h3>
-            Pensando nas linguagens mais usadas atualmente, disponibilizamos
+            </br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
             </br> os seguintes cursos na ALL TEC:
         </p>
         <ul>
