subindo a pagina de analise e colocando o link na index

--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
         <div class="voltarIni"><a href="index.htm">Home</a></div>
         <div class="irCurs"><a href="cursos.html">Cursos</a></div>
         <div class="irCont"><a href="Contatos_Java.html">Contato</a></div>
+
        </div> 
 
         <div class="cont">
@@ -30,7 +31,8 @@
         está num projeto onde deverá aprender uma nova linguagem em pouco tempo
         ou se simplesmente deseja entrar no mundo da tecnologia,
         a  ALL TEC é o seu lugar!<br><br>
-        Veja nossos cursos clicando <a href="cursos.html">aqui</a>.
+        Caso queira ficar por dentro sobre a realidade da educação no Brasil e 
+        no Mundo <a href="analise.html">clique aqui</a><br><br>    
         E não esqueça, pensou em tecnologia, pensou ALL TEC!
         </p>
 
