Inclusão do link

--- a/sql.html
+++ b/sql.html
@@ -10,13 +10,14 @@
 
 <body>
     <div class="page-header">
-        <h1><a href="/">ALL TEC CURSOS</a></h1>
+        <h1><a href="index.htm">ALL TEC CURSOS</a></h1>
     </div>
 
     <div class="menu">
         <div class="voltarIni"><a href="index.htm">Home</a></div>
         <div class="irCurs"><a href="cursos.html">Cursos</a></div>
         <div class="irCont"><a href="Contatos_Java.html">Contato</a></div>
+        <div class="irAna"><a href="analise.html">Análise</a></div>
     </div>
 
     <div class="cont">
