--- a/python.html
+++ b/python.html
@@ -14,11 +14,11 @@
     </div>
 
     <div class="menu">
-        <div class="voltarIni"><a href="index.htm">Home</a></div>
-        <div class="irCurs"><a href="cursos.html">Cursos</a></div>
-        <div class="irCont"><a href="Contatos_Java.html">Contato</a></div>
-        <div class="irAna"><a href="analise.html">Análise</a></div>
-    </div>
+        <div class="voltarIni"><a href="index.htm">HOME</a></div>
+        <div class="irCurs"><a href="cursos.html">CURSOS</a></div>
+        <div class="irCont"><a href="Contatos_Java.html">CONTATO</a></div>
+        <div class="irAna"><a href="analise.html">ANÁLISE</a></div>
+       </div> 
     
     <div class="cont">
         <h3>Por onde começar com Python?</h3>
