novas atualizações dos gráficos

--- a/Contatos_Java.html
+++ b/Contatos_Java.html
@@ -49,7 +49,7 @@
             Fale Conosco
         </h3><br><br>
 
-        Caso queria falar conosco, você pode ligar nos números abaixo ou nos enviar um formulário com a sua mensagem que responderemos por e-mail!<br><br>
+        Caso queira falar conosco, você pode ligar nos números abaixo ou nos enviar um formulário com a sua mensagem que responderemos por e-mail!<br><br>
 
         Fique a vontade para mandar sugestões ou tirar dúvidas!<br><br>
 
