--- a/analise.html
+++ b/analise.html
@@ -84,16 +84,16 @@
         data3.addColumn('number')
         data3.addRows([
           ['Crianças na escola ', 96.4],
-          
           ['Fund. completo aos 16 anos',75.9],
           ['Ensino médio completo aos 19 anos',59.2],
          
-        ]);
+        ]); 
 
         var options3 = {
-                       'width':800,
-                       'height': 500,
-                       'backgroundColor': 'transparent'
+                       'width':600,
+                       'height': 300,
+                       'backgroundColor': 'transparent',
+                        chartArea: {backgroundColor: 'transparent'}
                        };
 
       var chart3 = new google.charts.Line(document.getElementById('chart3_div'));
@@ -115,9 +115,9 @@ function drawAnnotations() {
       ]);
 
       var options2 = {
-        'width': 900,
-        'height': 500,
-        'backgroundColor': 'transparent'
+        width: 900, 
+        height: 500,
+        backgroundColor: 'transparent'
       };
 
       var chart2 = new google.visualization.ColumnChart(document.getElementById('chart2_div'));
@@ -170,8 +170,14 @@ function drawAnnotations() {
 
     <h1>População com ensino superior completo (25 a 34 anos)</h1>
     <div id="chart4_div"></div>
+
     <br><h1>Porcentagem de conclusão do Ensino Básico (até o ensino médio)</h1>
     <h2><div id="chart_div"></div></h2>
+
+    <br><br>O IDEB é um indicador criado pelo governo federal para medir a qualidade do ensino nas escolas públicas.
+    <br>Em 2017 a nota do Brasil foi de 5,8 nos anos iniciais, 4,7 nos anos finais e 3,8 no Ensino Médio.
+    <br>Ou seja, nos mostra que existe uma queda dos anos iniciais até a chegada do ensino médio e que mesmo nos anos iniciais, a nota não é satisfatória.
+    <br><br>
     <br><h1>Ideb (Índice de Desenvolvimento da Educação Básica) por regiões do Brasil(2017)</h1>
     <h2><div id="chart2_div"></div></h2>
     <br><h1>Ranking de crianças e adolescentes na escola</h1>
@@ -180,7 +186,7 @@ function drawAnnotations() {
     <br><br>Mas ainda temos 1,5 milhão de brasileiros de 4 a 17 anos fora da escola.
     <br>Ou seja, 1/4 dos nossos jovens com 16 anos não concluíram o Ensino Fundamental.
     <br>A cada 100 jovens brasileiros de 19 anos, 41 não concluíram o Ensino Médio.
-    <br><br>
+    <br>
 
     <br><br><strong>Fontes: </strong>
     <br><a href="https://www.oecd.org/education/education-at-a-glance/educationataglance2019-dataandmethodology.htm">OECD</a>
