--- a/Contatos_Java.html
+++ b/Contatos_Java.html
@@ -23,9 +23,7 @@
         <meta charset="UTF-8"/>
         
         <title>
-        
-            Contatos
-
+            ALL TEC - CONTATOS
         </title>
         <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
@@ -56,7 +54,7 @@
 
         <strong>Telefones:</strong><br>
         (11)1234-5678<br>
-        (11)8765-4321<br><br>
+        (11)98765-4321<br><br>
 
         <form method="POST"
         name="formulario_contatos">
