--- a/analise.html
+++ b/analise.html
@@ -1,7 +1,9 @@
 <html>
 
 <head>
-  <title>Análise</title>
+  <title>
+    ALL TEC - ANÁLISE
+</title>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript">
 
@@ -66,7 +68,7 @@
       ]);
 
       var options4 = {
-        colorAxis: { colors: ['red', 'white', 'green'], minValue: 0, maxValue: 100 },
+        colorAxis: { colors: ['#8A0808', 'red', 'white', '#58FA58' , '#0B6138'], minValue: 0, maxValue: 100 },
         width: 900,
         height: 500,
         backgroundColor: 'blue',
@@ -171,6 +173,9 @@ function drawAnnotations() {
     <h1>População com ensino superior completo (25 a 34 anos)</h1>
     <div id="chart4_div"></div>
 
+    <br><br>As informações divulgadas sobre o ensino básico no Brasil, apontam um enorme problema já que mais da metade da população acima 
+    <br>dos 25 anos sequer completou o ciclo básico de ensino, demostrando que estamos muito longe do ideal na educação.
+    <br><br>
     <br><h1>Porcentagem de conclusão do Ensino Básico (até o ensino médio)</h1>
     <h2><div id="chart_div"></div></h2>
 
