--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>
-            ALL TEC 
+            ALL TEC - HOME
         </title>
         <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
@@ -34,9 +34,13 @@
         Caso queira ficar por dentro sobre a realidade da educação no Brasil e 
         no Mundo <a href="analise.html">clique aqui</a><br><br>    
         E não esqueça, pensou em tecnologia, pensou ALL TEC!
+        <br><br>
         </p>
 
-        <img src="sala_index.jpg" alt="Nossa sala de Treinamento" width=300 height=200>
+        <img src="imagem3.png" width=280 height=200>
+        <img src="imagem4.png" width=280 height=200>
+        <img src="imagem5.png" width=280 height=200>
+        <img src="imagem6.png" width=280 height=200>
 
         </div>
       
