--- a/java.html
+++ b/java.html
@@ -4,7 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>JAVA</title>
+    <title>
+        ALL TEC - JAVA
+    </title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 
