--- a/python.html
+++ b/python.html
@@ -4,7 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>PYHTON</title>
+    <title>
+        ALL TEC - PYTHON
+    </title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 
