--- a/sql.html
+++ b/sql.html
@@ -4,7 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>SQL</title>
+    <title>
+        ALL TEC - SQL
+    </title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 
