--- a/cursos.html
+++ b/cursos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>
-            ALL TEC 
+            ALL TEC - CURSOS
         </title>
         <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
