--- a/front.html
+++ b/front.html
@@ -4,7 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Front-End</title>
+    <title>
+        ALL TEC - HTML
+    </title>
     <link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 
