--- a/analise.html
+++ b/analise.html
@@ -68,7 +68,7 @@
       ]);
 
       var options4 = {
-        colorAxis: { colors: ['#8A0808', 'red', 'white', '#58FA58' , '#0B6138'], minValue: 0, maxValue: 100 },
+        colorAxis: { colors: ['#8A0808', '#FA5858',  '#58FA58' , '#0B6138'], minValue: 0, maxValue: 100 },
         backgroundColor: '#58ACFA',
         datalessRegionColor: 'gray'
       };
