--- a/cursos.html
+++ b/cursos.html
@@ -27,11 +27,10 @@
             </br>Pensando nas linguagens mais usadas atualmente, disponibilizamos
             </br> os seguintes cursos na ALL TEC:
         </p>
-        <ul>
-            <li><a href="front.html">HTML</a></li> 
-            <li><a href="sql.html">SQL</a></li>
-            <li><a href="java.html">JAVA</a></li>
-            <li><a href="python.html">PYTHON</a></li> 
+            <a href="front.html"><img src="html.png" width=350 height=200></a>
+            <a href="sql.html"><img src="SQL.png" width=350 height=200></a><br>
+            <a href="java.html"><img src="java.png" width=350 height=200></a>
+            <a href="python.html"><img src="python.png" width=350 height=200></a>
             </ul>
         </div>      
     </body>
