--- a/analise.html
+++ b/analise.html
@@ -148,7 +148,7 @@ function drawAnnotations() {
       data.addRows([
         ['Ensino fundamental incompleto', 33.1],
         ['Nenhuma instrução formal', 6.9],
-        ['Esino fundamental incompleto', 8.1],
+        ['Esino fundamental completo', 8.1],
         ['Ensino médio incompleto', 4.5],
         ['Ensino básico completo', 47.4]
       ]);
